First Stable Release
* added javadoc to Services

* added class type subscriptions

* added class type subscriptions

* added class type subscriptions

* added https handler

* chore: added first SSL tests

* chore: added more ssl support

* chore: added more ssl support

* chore: added more ssl support

* feat: Added HTTPS capabilities and new Event Channnel management

* feat: removed ForkJoinPool on shutdown. Can cause random crashes on multiple instances

* feat: added HttpServer failure tests

* feat: added HttpServer failure tests

* feat: updated documentation

* feat: updated documentation

* feat: updated documentation

* chore: refactored schedulers

* chore: updated documentation

* chore: updated documentation

* chore: updated documentation

* chore: added more metrics

* chore: added documentation

* chore: added documentation

* chore: added documentation

* chore: added documentation

* chore: added documentation

* chore: added documentation